# media

./: package.json  pnpm-lock.yaml
ai/: docker-compose.yml
ai/tagger/: app.py  requirements.txt
app/: layout.tsx  page.tsx
components/: Controls.tsx  ImageGrid.tsx  PricingBanner.tsx  QuotaPill.tsx  Sidebar.tsx  collection-switcher.tsx  nav-main.tsx  nav-user.tsx
context/: FilesContext.tsx  UserContext.tsx
lib/: analyse.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: fs.json
src-tauri/src/: analyse.rs  lib.rs  types.rs
store/: storage.ts
