[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.7.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
time = { version = "0.3.41", features = ["formatting", "parsing"] }
mime_guess = "2.0.5"
image = { version = "0.25.6", features = ["png", "jpeg", "gif", "bmp", "webp"] }
img_hash = "3.2.0"
color-thief = "0.2.2"
lopdf = "0.36.0"
regex = "1.11.2"
once_cell = "1.21.3"
which = "8.0.0"
thiserror = "2.0.16"
rexif = "0.7.5"
anyhow = "1.0.99"
ureq = { version = "3.1.2", features = ["json"] }
base64 = "0.22.1"
tempfile = "3.22.0"
dotenvy = "0.15.7"
